shimlang/test_scripts/errors/float_list_fail.stderr
 1 | float([]);
     ^^^^^^^^^
Error: Cannot convert List(Word(u24([0, 0, 44]))) to float
